[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/ground.png" type="Texture" id=1]
[ext_resource path="res://Assets/prepare.png" type="Texture" id=2]
[ext_resource path="res://Assets/Arrow2png.png" type="Texture" id=3]
[ext_resource path="res://Assets/Arrow.png" type="Texture" id=4]
[ext_resource path="res://Tree.gd" type="Script" id=5]
[ext_resource path="res://Timer.gd" type="Script" id=6]
[ext_resource path="res://Assets/action.png" type="Texture" id=7]
[ext_resource path="res://Label.gd" type="Script" id=8]
[ext_resource path="res://Player.gd" type="Script" id=9]
[ext_resource path="res://Button.gd" type="Script" id=10]
[ext_resource path="res://Assets/Fonts/dogicapixel.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://HS.gd" type="Script" id=12]
[ext_resource path="res://Reload.gd" type="Script" id=13]
[ext_resource path="res://Assets/crack09.mp3.wav" type="AudioStream" id=14]
[ext_resource path="res://World.gd" type="Script" id=15]
[ext_resource path="res://Assets/back.png" type="Texture" id=16]
[ext_resource path="res://Assets/gear.png" type="Texture" id=17]
[ext_resource path="res://Assets/gearPress.png" type="Texture" id=18]
[ext_resource path="res://Assets/grabber.png" type="Texture" id=19]
[ext_resource path="res://ConfigMenu.gd" type="Script" id=20]
[ext_resource path="res://ChromAb.gd" type="Script" id=21]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=2]
resource_name = "Swing"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Prepare:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Action:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 8
extra_spacing_bottom = 5
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 8
extra_spacing_bottom = 5
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.545098, 0, 1 )

[sub_resource type="DynamicFont" id=12]
size = 8
extra_spacing_bottom = 5
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.976471, 0.52549, 0, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 2

[sub_resource type="StyleBoxLine" id=14]
color = Color( 1, 1, 1, 1 )
thickness = 3

[sub_resource type="Shader" id=15]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/god-rays

Feel free to use, improve and change this shader according to your needs
and consider sharing the modified result on godotshaders.com.
*/

shader_type canvas_item;

uniform float angle = -0.3;
uniform float position = -0.2;
uniform float spread : hint_range(0.0, 1.0) = 0.5;
uniform float cutoff : hint_range(-1.0, 1.0) = 0.1;
uniform float falloff : hint_range(0.0, 1.0) = 0.2;
uniform float edge_fade : hint_range(0.0, 1.0) = 0.15;

uniform float speed = 1.0;
uniform float ray1_density = 8.0;
uniform float ray2_density = 30.0;
uniform float ray2_intensity : hint_range(0.0, 1.0) = 0.3;

uniform vec4 color : hint_color = vec4(1.0, 0.9, 0.65, 0.8);

uniform bool hdr = false;
uniform float seed = 5.0;

// Random and noise functions from Book of Shader's chapter on Noise.
float random(vec2 _uv) {
    return fract(sin(dot(_uv.xy,
                         vec2(12.9898, 78.233))) *
        43758.5453123);
}

float noise (in vec2 uv) {
    vec2 i = floor(uv);
    vec2 f = fract(uv);

    // Four corners in 2D of a tile
    float a = random(i);
    float b = random(i + vec2(1.0, 0.0));
    float c = random(i + vec2(0.0, 1.0));
    float d = random(i + vec2(1.0, 1.0));


    // Smooth Interpolation

    // Cubic Hermine Curve. Same as SmoothStep()
    vec2 u = f * f * (3.0-2.0 * f);

    // Mix 4 coorners percentages
    return mix(a, b, u.x) +
            (c - a)* u.y * (1.0 - u.x) +
            (d - b) * u.x * u.y;
}

mat2 rotate(float _angle){
    return mat2(vec2(cos(_angle), -sin(_angle)),
                vec2(sin(_angle), cos(_angle)));
}

vec4 screen(vec4 base, vec4 blend){
	return 1.0 - (1.0 - base) * (1.0 - blend);
}

void fragment()
{
	
	// Rotate, skew and move the UVs
	vec2 transformed_uv = ( rotate(angle) * (UV - position) )  / ( (UV.y + spread) - (UV.y * spread) );
	
	// Animate the ray according the the new transformed UVs
	vec2 ray1 = vec2(transformed_uv.x * ray1_density + sin(TIME * 0.1 * speed) * (ray1_density * 0.2) + seed, 1.0);
	vec2 ray2 = vec2(transformed_uv.x * ray2_density + sin(TIME * 0.2 * speed) * (ray1_density * 0.2) + seed, 1.0);
	
	// Cut off the ray's edges
	float cut = step(cutoff, transformed_uv.x) * step(cutoff, 1.0 - transformed_uv.x);
	ray1 *= cut;
	ray2 *= cut;
	
	// Apply the noise pattern (i.e. create the rays)
	float rays;
	
	if (hdr){
		// This is not really HDR, but check this to not clamp the two merged rays making 
		// their values go over 1.0. Can make for some nice effect
		rays = noise(ray1) + (noise(ray2) * ray2_intensity);
	}
	else{
		 rays = clamp(noise(ray1) + (noise(ray2) * ray2_intensity), 0., 1.);
	}
	
	// Fade out edges
	rays *= smoothstep(0.0, falloff, (1.0 - UV.y)); // Bottom
	rays *= smoothstep(0.0 + cutoff, edge_fade + cutoff, transformed_uv.x); // Left
	rays *= smoothstep(0.0 + cutoff, edge_fade + cutoff, 1.0 - transformed_uv.x); // Right
	
	// Color to the rays
	vec3 shine = vec3(rays) * color.rgb;

	// Try different blending modes for a nicer effect. \"Screen\" is included in the code,
	// but take a look at https://godotshaders.com/snippet/blending-modes/ for more.
	// With \"Screen\" blend mode:
	shine = screen(texture(SCREEN_TEXTURE, SCREEN_UV), vec4(color)).rgb;
	
	COLOR = vec4(shine, rays * color.a);
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/angle = -0.4
shader_param/position = -0.6
shader_param/spread = 0.96
shader_param/cutoff = 0.104
shader_param/falloff = 0.333
shader_param/edge_fade = 0.257
shader_param/speed = 1.0
shader_param/ray1_density = 8.0
shader_param/ray2_density = 30.0
shader_param/ray2_intensity = 0.3
shader_param/color = Color( 0.772549, 0.623529, 0.498039, 0.8 )
shader_param/hdr = false
shader_param/seed = 14.0

[sub_resource type="Shader" id=17]
code = "// chromatic aberration
//---------------------------------

shader_type canvas_item;

uniform vec2 r_displacement = vec2(3.0, 0.0);
uniform vec2 g_displacement = vec2(0.0, 0.0);
uniform vec2 b_displacement = vec2(-3.0, 0.0);


void fragment()
{
	float r = texture(SCREEN_TEXTURE, SCREEN_UV + vec2(SCREEN_PIXEL_SIZE*r_displacement), 0.0).r;
	float g = texture(SCREEN_TEXTURE, SCREEN_UV + vec2(SCREEN_PIXEL_SIZE*g_displacement), 0.0).g;
	float b = texture(SCREEN_TEXTURE, SCREEN_UV + vec2(SCREEN_PIXEL_SIZE*b_displacement), 0.0).b;
	
	COLOR = vec4(r, g, b, 1.0);
}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/r_displacement = Vector2( 0, 0 )
shader_param/g_displacement = Vector2( 0, 0 )
shader_param/b_displacement = Vector2( 0, 0 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.745098, 0.745098, 0.745098, 1 )
corner_detail = 4
anti_aliasing = false

[node name="World" type="Node2D"]
script = ExtResource( 15 )

[node name="Ground" type="Sprite" parent="."]
position = Vector2( 0, 167 )
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Ground2" type="Sprite" parent="."]
position = Vector2( 29, 167 )
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Ground3" type="Sprite" parent="."]
position = Vector2( 58, 167 )
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Ground4" type="Sprite" parent="."]
position = Vector2( 87, 167 )
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Left" type="Position2D" parent="Player"]
position = Vector2( 30, 170 )

[node name="Right" type="Position2D" parent="Player"]
position = Vector2( 77, 170 )

[node name="Prepare" type="Sprite" parent="Player"]
visible = false
position = Vector2( 79, 127 )
texture = ExtResource( 2 )
centered = false

[node name="Action" type="Sprite" parent="Player"]
position = Vector2( 63, 134 )
texture = ExtResource( 7 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/RESET = SubResource( 1 )
anims/Swing = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 14 )
volume_db = -11.066
pitch_scale = 1.3

[node name="Tree" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 5 )

[node name="Logs" type="Node2D" parent="Tree"]

[node name="Spawning" type="Position2D" parent="Tree"]
position = Vector2( 51, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonR" type="Button" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -11.0
margin_right = -2.0
margin_bottom = 41.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
action_mode = 0
icon = ExtResource( 4 )
flat = true
align = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonL" type="Button" parent="CanvasLayer/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -11.0
margin_right = 36.0
margin_bottom = 41.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
action_mode = 0
icon = ExtResource( 3 )
flat = true
align = 0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_top = 40.0
margin_right = 51.0
margin_bottom = 57.0
text = "00"
align = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -75.0
margin_right = 51.0
margin_bottom = -58.0
custom_fonts/mono_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
scroll_active = false
script = ExtResource( 12 )

[node name="Button" type="Button" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = 5.0
margin_right = 53.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "Tentar denovo?"
script = ExtResource( 13 )

[node name="Config" type="TextureButton" parent="CanvasLayer/Control"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -19.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 19.0
toggle_mode = true
keep_pressed_outside = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigMenu" type="Panel" parent="CanvasLayer/Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -41.0
margin_right = 29.0
margin_bottom = 41.0
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ConfigMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -39.0
margin_right = 27.5
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ConfigMenu/VBoxContainer"]
margin_right = 55.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 12 )
text = "FX"

[node name="FXSlider" type="HSlider" parent="CanvasLayer/Control/ConfigMenu/VBoxContainer"]
margin_top = 15.0
margin_right = 55.0
margin_bottom = 20.0
custom_icons/grabber_highlight = ExtResource( 19 )
custom_icons/grabber = ExtResource( 19 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area = SubResource( 14 )
min_value = -80.0
max_value = 0.0
value = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control/ConfigMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 55.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 12 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/Control/ConfigMenu/VBoxContainer"]
margin_top = 39.0
margin_right = 55.0
margin_bottom = 44.0
custom_icons/grabber_highlight = ExtResource( 19 )
custom_icons/grabber = ExtResource( 19 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area = SubResource( 14 )
min_value = -80.0
max_value = 0.0
value = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
material = SubResource( 16 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 51, 197 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChromAb" type="ColorRect" parent="CanvasLayer/Control"]
material = SubResource( 18 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 51, 197 )
mouse_filter = 2
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="ProgressBar" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_left = 26.0
margin_top = 5.0
margin_right = -26.0
margin_bottom = 13.0
custom_styles/fg = SubResource( 19 )
custom_styles/bg = SubResource( 20 )
max_value = 1.25
percent_visible = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
modulate = Color( 0.258824, 0.466667, 0.592157, 1 )
position = Vector2( 53, 160 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 51, 91 )
current = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -4

[node name="Sprite" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 51, 91 )
texture = ExtResource( 16 )

[connection signal="button_pressed" from="Tree" to="Player" method="_on_Tree_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ButtonR" to="Tree" method="_on_Button_pressed" binds= [ "right" ]]
[connection signal="pressed" from="CanvasLayer/Control/ButtonL" to="Tree" method="_on_Button_pressed" binds= [ "left" ]]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="CanvasLayer/Control/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Config" to="CanvasLayer/Control/ConfigMenu" method="_on_Config_pressed"]
[connection signal="value_changed" from="CanvasLayer/Control/ConfigMenu/VBoxContainer/FXSlider" to="CanvasLayer/Control/ConfigMenu" method="_on_FXSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/ConfigMenu/VBoxContainer/MusicSlider" to="CanvasLayer/Control/ConfigMenu" method="_on_MusicSlider_value_changed"]
